--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,11 @@
+/*
 body {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #000000;
-    background-color: rgb(255, 246, 232);
-}
-  
+    color: #292b2c;
+    background-color: #fff;
+  }
   p {
     margin: 0px;
   }
@@ -20,10 +20,9 @@ body {
   }
   
   .index-title {
-    background-color: rgb(255, 246, 232);
-    color: #6592da;
+    background-color: #66BBB1;
+    color: #ffffff;
     padding: 5px;
-    text-align: center;
   }
   
   .article-metadata {
@@ -38,49 +37,59 @@ body {
   
   .article-title {
     text-decoration: none;
-    color: rgb(18, 31, 82);
+    color: #002b36;
     margin: 3px 0;
   }
-  
-  .article-metadata span {
-    margin-left: 0rem;
-  }
-  
-  .article-body {
-    margin: 10px 0 2rem;
-    font-size: 1rem;
-  }
-  
-  .container {
-    margin: 10px;
-    width: 960px;
-    margin: 20px auto;
-  }
-  
-  .container-inner {
-    display: flex;
-    padding: 5px;
-  }
-  
-  .container-body {
-    width: 560px;
-    margin: auto;
-  }
-  
-  .container-right {
-    width: 300px;
-  }
-  
-  .index-pagination {
-     font-size: 20px;
-  }
-  
-  .index-navi {
-    border-style: solid;
-    padding: 3px;
-  }
-  
-  .disabled-link {
-    pointer-events: none;
-    color: #d0d0d0;
-  }
+*/
+
+.article-metadata span {
+  margin-left: 0rem;
+}
+
+.article-body {
+  margin: 10px 0 2rem;
+}
+
+.container {
+  margin: 10px;
+  width: 960px;
+  margin: 20px auto;
+}
+
+.container-inner {
+  display: flex;
+  padding: 5px;
+}
+
+.container-body {
+  width: 800px;
+}
+
+.container-right {
+  width: 300px;
+  margin: 20px auto;
+}
+
+.index-pagination {
+   font-size: 20px;
+}
+
+.index-navi {
+  border-style: solid;
+  padding: 3px;
+}
+
+/*
+.disabled-link {
+  pointer-events: none;
+  color: #d0d0d0;
+}
+*/
+
+a:link {
+color: #002b36;
+}
+
+a:visited {
+color: #073642;
+}
